[package]
name = "trencher-escrow"
version = "0.1.0"
description = "Solana escrow program for Trencher IQ game prizes"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "trencher_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
